<resources>
    <string name="app_name">Теледом</string>
    <string name="app_info">%1$s для Android версия %2$s (%3$d) %4$s [устройство: %5$s]</string>
    <string name="app_title">Версия устарела</string>
    <string name="app_message">Обновить приложение?</string>
    <string name="default_notification_channel_id">channel_inbox</string>
    <string name="widget_title">Умный двор</string>
    <string name="privacy_policy"></string>
    <string name="setting_dialog_exit_caption">Выход из приложения</string>
    <string name="setting_dialog_exit_caption_msg">Вы действительно хотите выйти из вашей учетной записи?</string>
    <string name="setting_dialog_exit_yes">Да</string>
    <string name="setting_dialog_exit_no">Нет</string>
    <string name="setting_dialog_delete_title">Вы уверены?</string>
    <string name="setting_dialog_delete_yes">Да</string>
    <string name="setting_dialog_delete_no">Отмена</string>
    <string name="onboarding_skip">Пропустить</string>
    <string name="onboarding_next">Далее</string>
    <string name="onboarding_complete">Класс, давайте начнём!</string>
    <string name="onboarding_cam_title">Видеонаблюдение</string>
    <string name="onboarding_cam_subtitle">Будь в курсе всего, что происходит возле дома</string>
    <string name="onboarding_donation_title">Всё под контролем</string>
    <string name="onboarding_donation_subtitle">Управляй услугами и оплачивай их через\nприложение</string>
    <string name="onboarding_intercom_title">Умный домофон</string>
    <string name="onboarding_intercom_subtitle">Управляй домофоном, воротами или\nшлагбаумом со смартфона</string>
    <string name="issue_dialog_caption_0">Заявка создана.</string>
    <string name="reg_tel_caption">Введите номер телефона\nдля регистрации</string>
    <string name="reg_back_to_providers">Вернуться к выбору провайдера</string>
    <string name="reg_sms_code_tel">Введите код из СМС,\nотправленный на номер +%1$s</string>
    <string name="reg_flash_call_code_tel">
        Нам необходимо убедиться\nчто номер +%1$s действительно ваш.\n
        Вам нужно отклонить входящий вызов и ввести последние 4 цифры его номера
    </string>
    <string name="reg_sms_correct_tel">Исправить номер телефона</string>
    <string name="reg_sms_send_code_repeat">Отправить код повторно можно через\n%1$s</string>
    <string name="reg_sms_error_code">Неверный код. Попробуйте ещё раз</string>
    <string name="send_sms_error_code">Не получилось отправить. Подождите.</string>
    <string name="restore_access_title">Восстановить доступ</string>
    <string name="restore_access_caption">Пожалуйста, введите ваш номер договора и укажите email или телефон, которые вы использовали при регистрации договора</string>
    <string name="restore_access_edit_hint">Номер договора</string>
    <string name="restore_access_edit_btn_get_recovery">Получить доступные методы восстановления</string>
    <string name="restore_access_edit_btn_get_code">Получить код подтверждения</string>
    <string name="restore_access_input_code_phone">Код подтверждения отправлен\n на телефон %1$s</string>
    <string name="restore_access_input_code_email">Код подтверждения отправлен\n на почту %1$s</string>
    <string name="restore_access_btn_text_confirm">Подтвердить</string>
    <string name="restore_access_btn_resent_text">Отправить код повторно</string>
    <string name="restore_access_dialog_ok_title">Пароль от учетной записи отправлен.</string>
    <string name="restore_access_dialog_ok_yes">Перейти на страницу авторизации</string>
    <string name="title_address">Адреса</string>
    <string name="title_notification">Уведомления</string>
    <string name="title_chat">Чат</string>
    <string name="title_pay">Оплатить</string>
    <string name="title_burger">Меню</string>
    <string name="dialog_title">Включить гостевой доступ на час?</string>
    <string name="dialog_message">Всем, кто будет набирать номер вашей квартиры на домофоне, дверь будет открываться автоматически в течение 60 минут. По истечении данного времени работа домофона вернется в стандартный режим автоматически.</string>
    <string name="dialog_yes">ВКЛЮЧИТЬ</string>
    <string name="dialog_no">ОТМЕНА</string>
    <string name="dialog_sms">Информация для гостя успешно отправлена!</string>
    <string name="addresses_video_cameras">Видеокамеры</string>
    <string name="addresses_events">События</string>
    <string name="dialog_title2">Выключить гостевой доступ?</string>
    <string name="dialog_message2" translatable="false" />
    <string name="dialog_turn_off">ВЫКЛЮЧИТЬ</string>
    <string name="guest_access_enable">Включить</string>
    <string name="guest_access_enabled">Включён</string>
    <string name="addresses_empty_list">Список пуст</string>
    <string name="qr_code_dialog_title">Адрес добавлен.</string>
    <string name="qr_code_dialog_ok">Ок</string>
    <string name="qr_code_title">Наведите камеру на QR-код</string>
    <string name="qr_code_error_permission_title">Для работы с qr кодами нужно разрешение на использование камеры.</string>
    <string name="auth_where_is_contract_title">У вас есть договор с оператором?</string>
    <string name="auth_where_is_contract_caption">Введите номер и пароль договора, привязанного к данному адресу, и управляйте услугами из приложения.</string>
    <string name="auth_numer_pass0">Не помню пароль</string>
    <string name="auth_number_pass1">Ничего не помню</string>
    <string name="auth_number_btn_ok">Войти</string>
    <string name="auth_number_btn_no">У меня нет договора с оператором</string>
    <string name="auth_dialog_title">Создать заявку на восстановление данных по договору?</string>
    <string name="auth_dialog_yes">Создать</string>
    <string name="auth_dialog_no">Отмена</string>
    <string name="auth_contract_hint">Логин</string>
    <string name="input_address_title">Введите адрес</string>
    <string name="input_address_ok">Проверить доступные услуги</string>
    <string name="input_address_text_qr">У меня есть QR-код</string>
    <string name="address_verification_title">Подтверждение адреса</string>
    <string name="address_verification_descriptions">Как вам будет удобнее это сделать?</string>
    <string name="address_verification_courier_block1_title">Оставьте заявку</string>
    <string name="address_verification_courier_block1_description">В течение недели курьер принесёт секретный конверт</string>
    <string name="address_verification_courier_block2_title">Отсканируйте QR-код</string>
    <string name="address_verification_courier_block2_description">Он будет внутри конверта</string>
    <string name="address_verification_courier_block3_title">Пользуйтесь!</string>
    <string name="address_verification_courier_block3_description">Вы сразу получите доступ ко всему функционалу приложения «Умный домофон»</string>
    <string name="address_verification_courier_btn_done">Супер! Оставить заявку</string>
    <string name="address_verification_office_description">Посетите ближайший офис оператора с квитанцией ЖКХ за эту квартиру и мы сразу же активируем функцию умного домофона и видеонаблюдения.</string>
    <string name="address_verification_office_btn_done">Так и сделаю</string>
    <string name="address_verification_tab_title_1">Через курьера</string>
    <string name="address_verification_tab_title_2">Визит в офис</string>
    <string name="setting_dialog_service_connected_title">подключена</string>
    <string name="setting_dialog_service_connected_caption">Если хотите сменить тариф, оставьте заявку</string>
    <string name="setting_dialog_service_connected_button">Сменить тариф</string>
    <string name="setting_dialog_service_connected_chat">Здравствуйте, я бы хотел изменить тариф для услуги "%1$s" на договоре "%2$s"</string>
    <string name="setting_dialog_service_not_connected_title">не подключена</string>
    <string name="setting_dialog_service_not_connected_caption">Если хотите активировать услугу, оставьте заявку</string>
    <string name="setting_dialog_service_not_connected_button">Оставить заявку</string>
    <string name="setting_dialog_service_not_connected_chat">Здравствуйте, я бы хотел подключить услугу "%1$s" на договор "%2$s"</string>
    <string name="setting_dialog_service_unavailable_title">пока недоступна</string>
    <string name="setting_dialog_service_unavailable_caption">На данный момент услуга недоступна по вашему адресу. Для ее подключения необходимо собрать несколько заявок с вашего дома. Оставьте заявку первым!</string>
    <string name="setting_dialog_service_unavailable_button">Оставить заявку</string>
    <string name="setting_dialog_service_unavailable_chat">Здравствуйте, услуга "%1$s" недоступна по моему адресу, но я хочу пользоваться ей на договоре "%2$s"</string>
    <string name="setting_dialog_service_domophone_connected_title">подключена</string>
    <string name="setting_dialog_service_domophone_connected_caption">Если хотите получить доступ, оставьте сообщение</string>
    <string name="setting_dialog_service_domophone_connected_button">Получить доступ</string>
    <string name="setting_dialog_service_domophone_connected_chat">Здравствуйте, по моему адресу подключен домофон, мне необходимо получить доступ</string>
    <string name="setting_dialog_service_cctv_connected_title">подключена</string>
    <string name="setting_dialog_service_cctv_connected_caption">Если хотите получить доступ, оставьте сообщение</string>
    <string name="setting_dialog_service_cctv_connected_button">Получить доступ</string>
    <string name="setting_dialog_service_cctv_connected_chat">Здравствуйте, по моему адресу подключено видеонаблюдение, мне необходимо получить доступ</string>
    <string name="dialog_share_access_title">Поделиться доступом</string>
    <string name="dialog_share_access_by_phone_caption">Введите номер телефона человека, которому хотите предоставить доступ, или выберите его из контактов</string>
    <string name="dialog_share_access_by_license_plate_caption">Введите автомобильный номер телефона человека, которому хотите предоставить доступ</string>
    <string name="dialog_share_access_btn_ok">Поделиться</string>
    <string name="address_no_network_title">Упс :(</string>
    <string name="address_no_network_caption">Ваш адрес требует уточнения. Дождитесь звонка специалиста.\n\nКакую услугу вы хотели бы подключить?</string>
    <string name="address_no_network_btn_ok">Оставить заявку</string>
    <string name="address_work_soon_office_title">Совсем скоро  всё заработает!</string>
    <string name="enter_sip_address">Введите номер для звонка</string>
    <string name="sip_address">номер</string>
    <string name="doCall">Позвонить</string>
    <string name="tls">TLS</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="domain">домен</string>
    <string name="password">пароль</string>
    <string name="username">логин</string>
    <string name="connect">Подключиться</string>
    <string name="connected_to">Подключено к %s</string>
    <string name="opened">Открыто</string>
    <string name="open">Открыть</string>
    <string name="dow_mon">пн</string>
    <string name="dow_tue">вт</string>
    <string name="dow_wed">ср</string>
    <string name="sow_tue">чт</string>
    <string name="dow_fri">пт</string>
    <string name="dow_sat">сб</string>
    <string name="dow_sun">вс</string>
    <string name="auth_password">Пароль</string>
    <string name="item_sample">Шлагбаум Север</string>
    <string name="dialog_face_cancel">Отмена</string>
    <string name="title_add_face">Добавить это лицо?</string>
    <string name="add_item">Добавить</string>
    <string name="event_log_enter_group_name">Введите название группы</string>
    <string name="face_group_ungrouped_faces">Без группы</string>
    <string name="face_group_selection_existing">Существующая группа</string>
    <string name="face_group_selection_new">Новая группа</string>
</resources>