<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dow_mon"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dow_tue"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dow_wed"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sow_tue"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dow_fri"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dow_sat"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dow_sun"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>
