<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mOptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <EditText
                android:id="@+id/mUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

            <EditText
                android:id="@+id/mDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domain" />

            <RadioGroup
                android:id="@+id/mTransport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/transport_udp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/udp" />

                <RadioButton
                    android:id="@+id/transport_tcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/tcp" />

                <RadioButton
                    android:id="@+id/transport_tls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:checked="true"
                    android:text="@string/tls" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/connect" />

            <TextView
                android:id="@+id/mStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@null"
                tools:text="@string/connected_to" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mCallLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_sip_address" />

            <EditText
                android:id="@+id/mSipAddressToCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sip_address" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mAnswerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doCall" />

                <TextView
                    android:id="@+id/mCallStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@null"
                    tools:text="@string/connected_to" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">
                <TextureView
                    android:id="@+id/mVideoSip"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp" />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>
</ScrollView>