<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.main.address.auth.AuthFragment">

    <ImageView
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_top_wide"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/surface_corner_radius_compensation_wide"
        android:background="@drawable/background_surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBackground" />

    <EditText
        android:id="@+id/etContractNumber"
        android:textCursorDrawable="@drawable/color_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        style="@style/EditTextStyle"
        android:hint="@string/auth_contract_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@+id/surface"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        android:paddingEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContractNumber" />

    <TextView
        android:id="@+id/tvNotRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dashed"
        android:text="@string/auth_numer_pass0"
        android:textColor="@color/brand"
        app:layout_constraintEnd_toStartOf="@+id/tvRememberAnything"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvRememberAnything"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/dashed"
        android:text="@string/auth_number_pass1"
        android:textColor="@color/brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    <ViewStub
        android:id="@+id/fragmentAuthStub"
        android:inflatedId="@+id/inflatedAuthStub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout="@layout/preview_for_stub"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRememberAnything" />

    <Button
        android:id="@+id/btnSignIn"
        style="@style/buttonBlueFlooded"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:paddingStart="50dp"
        android:paddingTop="18dp"
        android:paddingEnd="50dp"
        android:paddingBottom="18dp"
        android:text="@string/auth_number_btn_ok"
        app:layout_constraintBottom_toTopOf="@+id/btnNoContract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotRememberPassword"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnNoContract"
        style="@style/buttonBlueNoFlooded"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="@string/auth_number_btn_no"
        app:layout_constraintBottom_toBottomOf="@+id/surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWhereContract"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/auth_where_is_contract_title"
        android:textColor="@color/on_top_background"
        android:textSize="32sp"
        android:textStyle="bold"
        app:autoSizeMinTextSize="15sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@+id/surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/tvWhereContractCaption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/auth_where_is_contract_caption"
        android:textColor="@color/on_top_background"
        app:autoSizeMinTextSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhereContract"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/ivShowHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        app:srcCompat="@drawable/ic_visibility_off" />

</androidx.constraintlayout.widget.ConstraintLayout>