<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        tools:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_placeholder_image" />

    <LinearLayout
        android:id="@+id/bottomScrim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_barrier"
            app:tint="@color/on_filled"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/on_filled"
            android:textSize="18sp"
            tools:text="@string/item_sample" />

        <ToggleButton
            android:id="@+id/tbOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tooglebutton_selector2"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/opened"
            android:textAllCaps="false"
            android:textColor="@color/on_filled"
            android:textOff="@string/open"
            android:textOn="@string/opened" />

    </LinearLayout>

</FrameLayout>
